--- a/舒克贝塔传.md
+++ b/舒克贝塔传.md
@@ -27,7 +27,7 @@
 贝塔打败了谁？
 咪丽
 
-贝塔去了哪儿？
+贝塔去了哪里？
 外面
 
 # 第五章
@@ -64,4 +64,118 @@
 
 # 第九章
 
-舒克
+舒克和贝塔在哪种城堡迫降了？
+一做猫城
+
+舒克和贝塔能不能逃？
+不能
+
+# 第十章
+
+坦克被扔哪儿了？
+池塘里了
+
+几只猫把谁和谁罩住了？
+舒克和贝塔
+
+#第十一章
+
+猫吃没吃舒克和贝塔？
+没吃
+
+猫认识不认识老鼠？
+不认识
+
+# 第十二章
+
+舒克和贝塔去没去见猫的国王？
+去见了
+
+国王是一只什么？
+一只白老鼠
+
+# 第十三章
+
+国王要怎么处理舒克和贝塔？
+害死舒克和贝塔
+
+舒克和贝塔吃没吃猫肉？
+没吃
+
+# 第十四章
+
+舒克和贝塔怕不怕电？
+不怕
+
+舒克和贝塔怎么处理白露（国王）？
+把它带走
+
+# 第十五章
+
+白路要对飞机做什么？
+白路要劫持飞机
+
+舒克打不打的过白路？
+打不过
+
+# 第十六章
+
+贝塔上没上飞机？
+上了
+
+白路成功没成功？
+没成功
+
+# 第十七章
+
+舒克和贝塔遇到的大花猫是哪只？
+要处死舒克的那只（小花猫长成大花猫）
+
+飞机没电了，舒克找到没找到电池？
+找到了
+
+# 第十八章
+
+舒克表演没表演飞机？
+表演了
+
+舒克和贝塔怎么帮助了皮皮鲁？
+舒克和贝塔把钟拨了二十分钟，这样皮皮鲁可以早点放学
+
+# 第十九章
+
+一点钟什么时候到了？
+早二十五分钟
+
+明天有什么比赛？
+航模比赛
+
+# 第二十章
+
+航模比赛哪个飞机得了冠军？
+皮皮鲁学校的飞机
+
+大花猫藏起来了舒克和贝塔，皮皮鲁找没找到舒克和
+找到了
+
+# 第二十一章
+
+三只猫在欺负谁？
+一只猫，咪丽
+
+三只猫追上了贝塔，舒克说了啥？
+“刹车！”
+
+# 第二十二章
+
+贝塔给舒克什么好办法？
+用钩子钩猫的耳朵
+
+为什么咪丽来到了野外？
+没有老鼠，养猫也就没用了，主人把咪丽赶出来了
+
+# 第二十三章
+
+贝塔要回到原来的地方，舒克想干什么了？
+舒克要看妈妈
+
