--- a/舒克贝塔传.md
+++ b/舒克贝塔传.md
@@ -78,7 +78,7 @@
 几只猫把谁和谁罩住了？
 舒克和贝塔
 
-#第十一章
+# 第十一章
 
 猫吃没吃舒克和贝塔？
 没吃
@@ -155,7 +155,7 @@
 航模比赛哪个飞机得了冠军？
 皮皮鲁学校的飞机
 
-大花猫藏起来了舒克和贝塔，皮皮鲁找没找到舒克和
+大花猫藏起来了舒克和贝塔，皮皮鲁找没找到舒克和贝塔吗？
 找到了
 
 # 第二十一章
@@ -179,3 +179,164 @@
 贝塔要回到原来的地方，舒克想干什么了？
 舒克要看妈妈
 
+舒克和贝塔同意
+
+# 第二十四章
+
+贝塔想了什么办法能让贝塔走而咪丽不被赶出去？
+让咪丽学老鼠叫
+
+成功了吗？
+成功了
+
+# 第二十五章
+
+舒克想要给妈妈找什么？
+吃的
+
+谁看见了舒克？
+大花猫
+
+# 第二十六章
+
+大家想不想舒克看妈妈？
+不想
+
+谁来了？
+贝塔和咪丽
+
+# 第二十七章
+
+舒克和贝塔想成立什么？
+舒克贝塔航空公司
+
+有多少小老鼠报名？
+七十多
+
+# 第二十八章
+
+飞机出故障，问题在哪儿？
+改锥
+
+臭球有没有继续当机械师？
+有
+
+# 第二十九章
+
+做冰激凌要什么？
+牛奶和鸡蛋
+
+舒克去拿，碰到了那只老鼠？
+海盗(名字)
+
+# 第三十章
+
+舒克同意海盗接管机场了吗？
+同意了
+
+海盗有多少人？
+二十七只
+
+# 第三十一章
+
+舒克想怎么处理海盗？
+先关几天
+
+臭球报告舒克和贝塔什么？
+海盗跑了
+
+# 第三十二章
+
+罗丘出了什么事？
+他被抓住了
+
+胖经理说多放什么？
+色素，糖精
+
+# 第三十三章
+
+出了哪两件好事？
+罗丘脱险、皮皮鲁送了一架大型喷气式客机
+
+这架飞机是仿造什么飞机的？
+波音747飞机
+
+# 第三十四章
+
+舒克去开皮皮鲁号(那架大型喷气式客机)，谁开直升机？
+臭球
+
+皮皮鲁号第一次试着陆出了什么事？
+忘放起落架
+
+# 第三十五章
+
+皮皮鲁号飞到远方，忘修跑到，皮皮鲁号在哪儿迫降？
+公路上
+
+乘客门有没有同舒克算账？
+没有
+
+# 第三十六章
+
+舒克反对在剧本上用他的什么？
+真名
+
+谁表演舒克？
+臭球
+
+# 第三十七章
+
+拍电影的时候摄像机里忘放胶片，为什么臭球高兴？
+他可以再吃一次花生米了
+
+谁来打皮皮鲁号？
+海盗和两位部下开着歼击机
+
+# 第三十八章
+
+飞机撞上了什么？
+渔网
+
+海盗的飞机来找舒克，舒克躲在草丛里。为什么舒克驾驶皮皮鲁号冲上天？
+这样可以引开海盗
+
+# 第三十九章
+
+为什么海盗返航了？
+老鹰来了
+
+第二天，多少架歼击机来了？
+几十架
+
+# 第四十章
+
+大家说应该有什么？
+高射炮，战斗机
+
+臭球说去哪儿找高射炮和战斗机？
+找皮皮鲁
+
+# 第四十一章
+
+皮皮鲁给了什么？
+吸铁石
+
+飞机回机场的时候遇到了什么？
+海盗的几架飞机
+
+# 第四十二章
+
+舒克打掉了多少海盗的多少飞机，海盗打掉了多少舒克的飞机？
+舒克打掉了两架，海盗没打掉一架
+
+舒克拿什么打的？
+吸铁石
+
+# 第四十三章
+
+发生了什么事，说是空战史上的奇迹？
+海盗的飞机悬停在空中
+
+海盗的飞机快要被舒克哪去了，海盗打自己的飞机的时候，舒克怎么攻击海盗？
+用镜子晃他
