Update reading notes

--- a/舒克贝塔传.md
+++ b/舒克贝塔传.md
@@ -179,7 +179,8 @@
 贝塔要回到原来的地方，舒克想干什么了？
 舒克要看妈妈
 
-舒克和贝塔同意
+舒克和贝塔同意多长时间联系一次？
+一小时
 
 # 第二十四章
 
@@ -340,3 +341,67 @@
 
 海盗的飞机快要被舒克哪去了，海盗打自己的飞机的时候，舒克怎么攻击海盗？
 用镜子晃他
+
+# 第四十四章
+
+舒克试飞歼击机，要着陆了，发生了什么？
+海盗来了
+
+为什么他这么快来？
+怕舒克会开歼击机
+
+# 第四十五章
+
+谁来支授舒克？
+臭球
+
+海盗命令部下不让臭球起飞，臭球有没有成功起飞？
+有
+
+# 第四十六章
+
+海盗想违反什么关于空战的规定？
+飞行员跳伞后，不能攻击
+
+海盗在哪儿打掉了舒克？
+城上面
+
+# 第四十七章
+
+舒克去了皮皮鲁家，皮皮鲁给了舒克多少架战斗机？
+二十架
+
+战斗机是那种战斗机？
+歼击机，强击机，轰炸机，侦察机
+
+# 第四十八章
+
+飞行练习时，第二架歼击机出了什么问题？
+飞机失速
+
+他们练习了多长时间？
+两个小时
+
+# 第四十九章
+
+海盗用了什么子弹来打舒克？
+导弹
+
+打到了舒克吗？
+没有
+
+# 第五十章
+
+舒克想怎么打海盗？
+轰炸海盗的机场
+
+谁想和舒克一起去？
+贝塔
+
+# 第五十一章
+
+舒克和贝塔决定干新事业，航空公司交给谁？
+臭球和罗丘
+
+臭球和罗丘要怎么改装飞机？
+轰炸机改装成客机，留着歼击机，以防万一
